--- a/FlybitsTest/Base.lproj/Main.storyboard
+++ b/FlybitsTest/Base.lproj/Main.storyboard
@@ -1,131 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ale-VW-XEh">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dgw-99-U06">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Profile-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FlybitsTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c4d-FT-1C1">
-                                <rect key="frame" x="20" y="97" width="83" height="34"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Group 276.png" translatesAutoresizingMaskIntoConstraints="NO" id="SsN-VK-jk9">
+                                <rect key="frame" x="-213" y="-30" width="800" height="709"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Concierge">
-                                    <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="showConcierge:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CwH-nD-B5g"/>
-                                </connections>
-                            </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZuT-jr-EkX">
-                                <rect key="frame" x="0.0" y="88" width="414" height="676"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Balance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ivQ-db-DZ0">
-                                        <rect key="frame" x="151" y="248" width="97" height="34"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$7,894.93" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fLK-gW-DT3">
-                                        <rect key="frame" x="134" y="290" width="131" height="34"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="ZuT-jr-EkX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BIV-bz-2L0"/>
-                            <constraint firstItem="ZuT-jr-EkX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="LIw-UE-fUN"/>
-                            <constraint firstItem="ZuT-jr-EkX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="URQ-1h-SnP"/>
-                            <constraint firstItem="ZuT-jr-EkX" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="YqM-x5-jep"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="wJs-q9-2OB"/>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="tac-cq-5hg">
-                        <barButtonItem key="leftBarButtonItem" title="Item" image="text.justify" catalog="system" id="Ukd-Cx-L85">
-                            <connections>
-                                <action selector="hamburgerClicked:" destination="BYZ-38-t0r" id="aCP-Qy-O4R"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="LeadingC" destination="BIV-bz-2L0" id="M6O-ht-w3Y"/>
-                        <outlet property="TrailingC" destination="URQ-1h-SnP" id="uXZ-FR-OLO"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="126.5625"/>
+            <point key="canvasLocation" x="181.59999999999999" y="-11.822660098522167"/>
         </scene>
-        <!--My Balance-->
-        <scene sceneID="tMC-rf-LTe">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ucp-7l-eIv" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="My Balance" id="X9F-Ei-70X"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Jwg-1l-slJ">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="j4n-2X-e0Y"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aJJ-sF-7Gr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
-        </scene>
-        <!--Transfer Money-->
+        <!--Concierge-->
         <scene sceneID="juz-Cl-zo3">
             <objects>
-                <viewController id="Md2-qA-wsB" sceneMemberID="viewController">
+                <viewController id="Md2-qA-wsB" customClass="ViewController" customModule="FlybitsTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uPz-g1-KbP">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nxS-gr-b1b">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="kTq-Gf-IBT"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Transfer Money" id="PnI-Hp-M8K"/>
+                    <tabBarItem key="tabBarItem" title="Concierge" id="PnI-Hp-M8K"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a89-bY-0wh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-854" y="841"/>
+            <point key="canvasLocation" x="-907.24637681159425" y="799.55357142857144"/>
+        </scene>
+        <!--Profile Select View Controller-->
+        <scene sceneID="dor-Of-ZWL">
+            <objects>
+                <viewController id="dgw-99-U06" customClass="ProfileSelectViewController" customModule="FlybitsTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9ZN-fP-DOo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yqB-6J-xwC">
+                                <rect key="frame" x="107" y="114" width="161" height="70"/>
+                                <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="IFg-m3-PxV"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="QBo-OK-XfV"/>
+                                    <constraint firstAttribute="width" constant="200" id="qUp-1D-SCg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Demo User 1">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="user1clicked:" destination="dgw-99-U06" eventType="touchUpInside" id="ojv-aL-AHk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ik1-sP-lm0">
+                                <rect key="frame" x="107" y="234" width="161" height="70"/>
+                                <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="b3M-Rw-rLs"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="uTc-Xs-kLn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Demo User 2">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="user2clicked:" destination="dgw-99-U06" eventType="touchUpInside" id="Zh7-oo-miW"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Ik1-sP-lm0" firstAttribute="top" secondItem="yqB-6J-xwC" secondAttribute="bottom" constant="50" id="1V0-vf-kU8"/>
+                            <constraint firstItem="jEP-Zx-pdM" firstAttribute="trailing" secondItem="Ik1-sP-lm0" secondAttribute="trailing" constant="107" id="5lB-nn-2c7"/>
+                            <constraint firstItem="yqB-6J-xwC" firstAttribute="leading" secondItem="jEP-Zx-pdM" secondAttribute="leading" constant="107" id="I6O-tv-VIf"/>
+                            <constraint firstItem="yqB-6J-xwC" firstAttribute="top" secondItem="jEP-Zx-pdM" secondAttribute="top" constant="70" id="bm6-qF-oVy"/>
+                            <constraint firstItem="Ik1-sP-lm0" firstAttribute="leading" secondItem="jEP-Zx-pdM" secondAttribute="leading" constant="107" id="i9j-gA-ago"/>
+                            <constraint firstItem="jEP-Zx-pdM" firstAttribute="trailing" secondItem="yqB-6J-xwC" secondAttribute="trailing" constant="107" id="v8O-BI-nij"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="jEP-Zx-pdM"/>
+                    </view>
+                    <connections>
+                        <segue destination="ale-VW-XEh" kind="show" identifier="profileToTab" id="qGi-mF-pUU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nhg-tc-x5Q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2386" y="-11"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="K6v-fD-iaP">
             <objects>
                 <tabBarController id="ale-VW-XEh" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="E7n-gu-6gv"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gip-ga-Qwi">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ucp-7l-eIv" kind="relationship" relationship="viewControllers" id="3iZ-1f-cd7"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="e3f-gC-0jV"/>
                         <segue destination="Md2-qA-wsB" kind="relationship" relationship="viewControllers" id="jqH-8I-2TE"/>
                     </connections>
                 </tabBarController>
@@ -135,6 +127,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="text.justify" catalog="system" width="128" height="100"/>
+        <image name="Group 276.png" width="380" height="812"/>
     </resources>
 </document>
